# coal-pool-client

./: .gitignore  Cargo.toml  Dockerfile  build_all.sh  rust-toolchain.toml
.github/workflows/: build-on-tag.yml
src/: balance.rs  claim.rs  database.rs  delegate_stake.rs  delegate_stake_guild.rs  earnings.rs  generate_key.rs  guild.rs  main.rs  mine.rs  stake_balance.rs  undelegate_stake.rs  undelegate_stake_guild.rs  utils.rs
src/coal_stake/: mod.rs  stake.rs
src/guild/: delegate_stake_guild.rs  mod.rs  undelegate_stake_guild.rs
src/mining/: mine.rs  mod.rs
