[package]
name = "excalivator-client"
version = "3.2.6"
edition = "2021"
description = "Excalivator mining pool client."
license = "Apache-2.0"
repository = "https://github.com/shinyst-shiny/coal-pool-client"
keywords = ["solana", "crypto", "mining", "client", "mining-pool"]

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.13", features = ["derive"] }
core_affinity = "0.8.1"
coal-api = "2.6.0"
coal-guilds-api = "1.1.0"
ore-api = "2.2.0"
drillx_2 = "1.1.0"
futures-util = "0.3.30"
reqwest = { version = "^0.11.0", features = ["json", "rustls-tls"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
url = "2.5.2"
solana-sdk = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
    "no-entrypoint",
] }
rayon = "1.10"
inquire = "0.7.5"
dirs = "5.0.1"
colored = "2.0"
indicatif = "0.17"
tiny-bip39 = "0.8.2"
qrcode = "0.14.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"

[profile.release]
opt-level = 3     # Full optimisations
codegen-units = 1 # Better optimization with fewer codegen units
lto = true        # Enable Link Time Optimization (LTO)
debug = false     # Disable debug info to reduce binary size
panic = 'abort'   # Reduces the binary size further by not including unwinding information
rpath = false
incremental = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native"]
