[package]
name = "excalivator-client"
version = "3.2.11"
edition = "2021"
description = "Excalivator mining pool client."
license = "Apache-2.0"
repository = "https://github.com/shinyst-shiny/coal-pool-client"
keywords = ["solana", "crypto", "mining", "client", "mining-pool"]

[features]
default = []
admin = []

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
core_affinity = "0.8.1"
drillx_2 = "1.1.0"
futures = "0.3.30"
futures-util = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.12", features = ["json"] }
solana-sdk = "^1.18"
serde_json = "1.0"
spl-token = { version = "^4", features = ["no-entrypoint"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"
inquire = "0.7.5"
base64 = "0.22.1"
semver = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
qrcode = "0.14.1"
tiny-bip39 = "0.8.2"
rayon = "1.10"

[profile.release]
opt-level = 3     # Full optimisations
codegen-units = 1 # Better optimization with fewer codegen units
lto = true        # Enable Link Time Optimization (LTO)
debug = false     # Disable debug info to reduce binary size
panic = 'abort'   # Reduces the binary size further by not including unwinding information
rpath = false
incremental = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native"]
